src/app/shared/scss/button.scss
@import "conf/index";

a.full, button.full {
  width: 100%;
}

.mat-button, .mat-button-toggle, .mat-raised-button {
  text-transform: uppercase;
}

button.label {
  color: $unimportant;
}

.mat-button.menu-button {
  min-width: 0;
}

.invisible {
  display: none;
}

